<resources>
    <string name="app_name">proyecto_07</string>
    <string name="calculadora_cb">Calculadora CB</string>
    <string name="calcular_divisas">Calcular Divisas</string>
    <string name="toggle_button_switch">Toggle Button / Switch</string>
    <string name="persistencia_de_parametros">Persistencia de Parametros</string>
    <string name="poco_texto">Poco texto</string>
    <string name="usuario">Usuario</string>
    <string name="password">Password</string>
    <string name="logout">Logout</string>
    <string name="login">Login</string>
    <string name="save_data_with_file">Save data with file</string>
    <string name="save">SAVE</string>
    <string name="read">READ</string>
    <string name="nombre">nombre</string>
    <string name="password1">password</string>
    <string name="igresa_un_texto">igresa un texto</string>
    <string name="listview">listView</string>
    <string name="ingresar">Ingresar</string>
    <string name="buscar">Buscar</string>
    <string name="name">Name</string>
    <string name="user">user</string>
    <string name="registrarse">registrarse</string>
    <string name="cardview">CardView</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="textview">TextView</string>
    <string name="todo">TODO</string>
    <string name="light">light</string>
    <string name="last_name">last name</string>
    <string name="email">email</string>
    <string name="phone">phone</string>
    <string name="editar_telefono">Editar Telefono</string>
    <string name="editar">Editar</string>

</resources>