<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.05109489" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.96" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.98" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.027359782" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toTopOf="@+id/guideline3"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toTopOf="@+id/guideline4"
        app:layout_constraintVertical_bias="0.66">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/button_calculadoraCB"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/calculadora_cb" />

            <Button
                android:id="@+id/button_divisas"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/calcular_divisas" />

            <Button
                android:id="@+id/button_toggleSwitch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/toggle_button_switch" />

            <EditText
                android:id="@+id/editTextText_PasoDeParametros"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/poco_texto"
                android:importantForAutofill="no"
                android:inputType="textPersonName" />

            <Button
                android:id="@+id/button_PDP"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/persistencia_de_parametros" />

            <EditText
                android:id="@+id/editTextTextPersonName_Usuario"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/usuario"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/editTextTextPassword_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/password"
                android:importantForAutofill="no"
                android:inputType="textPassword" />

            <Spinner
                android:id="@+id/spinner_tipoDeSangre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/button_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/login" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/save_data_with_file"
                android:textSize="30sp" />

            <EditText
                android:id="@+id/editTextTextMultiLine_1"
                android:layout_width="match_parent"
                android:layout_height="182dp"
                android:ems="10"
                android:gravity="start|top"
                android:hint="@string/igresa_un_texto"
                android:importantForAutofill="no"
                android:inputType="textMultiLine" />

            <Button
                android:id="@+id/button_login_save"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="click"
                android:text="@string/save" />

            <Button
                android:id="@+id/button_read"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="click"
                android:text="@string/read" />

            <Spinner
                android:id="@+id/spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/button_listView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/listview" />

            <Button
                android:id="@+id/button_CardView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cardview" />

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>