<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#3949AB"
    android:elevation="10dp"
    tools:context=".LoginFireBase">

    <androidx.cardview.widget.CardView
        android:layout_width="350dp"
        android:layout_height="500dp"
        android:background="#0000897B"
        app:cardBackgroundColor="#FFFFFF"
        app:cardCornerRadius="20dp"
        app:cardPreventCornerOverlap="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView_registrarse"
                android:layout_width="265dp"
                android:layout_height="45dp"
                app:cardBackgroundColor="#FFB300"
                app:cardCornerRadius="10dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/guideline29"
                app:layout_constraintStart_toStartOf="@+id/guideline26"
                app:layout_constraintTop_toTopOf="@+id/guideline31">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingStart="20dp"
                    android:paddingTop="10dp"
                    android:paddingEnd="20dp"
                    android:paddingBottom="10dp">

                    <TextView
                        android:id="@+id/textView_12"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/registrarse"
                        android:textAlignment="center"
                        android:textColor="#FFFFFF"
                        android:textSize="18sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="1.0"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintVertical_bias="0.0" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline25"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.31" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline26"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.048661802" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline27"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.6" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline28"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.47" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline29"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.96" />

            <EditText
                android:id="@+id/editTextText_userFB"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:ems="10"
                android:hint="@string/user"
                android:importantForAutofill="no"
                android:inputType="textPersonName"
                app:layout_constraintBottom_toTopOf="@+id/guideline28"
                app:layout_constraintEnd_toStartOf="@+id/guideline29"
                app:layout_constraintStart_toStartOf="@+id/guideline26"
                app:layout_constraintTop_toTopOf="@+id/guideline25" />

            <EditText
                android:id="@+id/editTextTextPassword_fb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/password"
                android:inputType="textPassword"
                app:layout_constraintBottom_toTopOf="@+id/guideline27"
                app:layout_constraintEnd_toStartOf="@+id/guideline29"
                app:layout_constraintStart_toStartOf="@+id/guideline26"
                app:layout_constraintTop_toTopOf="@+id/guideline28" />

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView_login"
                android:layout_width="265dp"
                android:layout_height="45dp"
                app:cardBackgroundColor="#3949AB"
                app:cardCornerRadius="10dp"
                app:layout_constraintBottom_toTopOf="@+id/guideline31"
                app:layout_constraintEnd_toStartOf="@+id/guideline29"
                app:layout_constraintStart_toStartOf="@+id/guideline26"
                app:layout_constraintTop_toTopOf="@+id/guideline27">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingStart="20dp"
                    android:paddingTop="10dp"
                    android:paddingEnd="20dp"
                    android:paddingBottom="10dp">

                    <TextView
                        android:id="@+id/textView_101"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/login"
                        android:textAlignment="center"
                        android:textColor="#FFFFFF"
                        android:textSize="18sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="1.0"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintVertical_bias="0.0" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:textSize="36sp"
                app:layout_constraintBottom_toTopOf="@+id/guideline25"
                app:layout_constraintEnd_toStartOf="@+id/guideline29"
                app:layout_constraintStart_toStartOf="@+id/guideline26"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline31"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.81" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>